# WebServer

./: CMakeLists.txt
Auth/: CMakeLists.txt
Auth/include/Auth/: AuthService.hpp  Guards.hpp  Jwt.hpp  Password.hpp  Role.hpp  Totp.hpp
Auth/src/: AuthService.cpp  Guards.cpp  Jwt.cpp  Password.cpp  Totp.cpp
AuthLoginPlugin/: CMakeLists.txt
AuthLoginPlugin/src/: AuthLoginPlugin.cpp
AuthService/: CMakeLists.txt
AuthService/include/AuthService/: AuthService.hpp
AuthService/src/: AuthService.cpp
AuthSigninPlugin/: CMakeLists.txt
AuthSigninPlugin/src/: AuthSigninPlugin.cpp
ChatRoomPlugin/: CMakeLists.txt
ChatRoomPlugin/src/: ChatRoomPlugin.cpp
ChatRoomPlugin/test/: CMakeLists.txt
ChatRoomPlugin/test/src/: ChatRoomPluginTests.cpp
Commands/: CMakeLists.txt
Commands/include/Commands/: Command.hpp  CommandDispatcher.hpp  CommandRepo.hpp
Commands/src/: Command.cpp  CommandDispatcher.cpp  CommandRepo.cpp
Factory/: CMakeLists.txt
Factory/include/Factory/: EventBuilder.hpp  GenericFactory.hpp  IoTDeviceBuilder.hpp  MqttTopicBuilder.hpp  ServerBuilder.hpp  SiteBuilder.hpp  UserBuilder.hpp  ZoneBuilder.hpp
Factory/src/: EventBuilder.cpp  IoTDeviceBuilder.cpp  MqttTopicBuilder.cpp  ServerBuilder.cpp  SiteBuilder.cpp  UserBuilder.cpp  ZoneBuilder.cpp
Managers/: CMakeLists.txt
Managers/include/Managers/: DeviceManager.hpp  DeviceRegistry.hpp  MqttDeviceConnector.hpp  UserManager.hpp
Managers/src/: DeviceManager.cpp  DeviceRegistry.cpp  MqttDeviceConnector.cpp  UserManager.cpp
Models/: CMakeLists.txt
Models/include/Models/Auth/: Tenant.hpp  User.hpp
Models/include/Models/Core/: CoreObject.hpp  Device.hpp  Event.hpp  IDevice.hpp  IJsonSerialisable.hpp  IoTDevice.hpp  Protocol.hpp  Server.hpp
Models/include/Models/Data/: MqttTopic.hpp
Models/include/Models/IoTDevices/: MqttDevice.hpp
Models/include/Models/Location/: Site.hpp  Zone.hpp
Models/include/Models/Servers/: MqttBroker.hpp
Models/src/Auth/: Tenant.cpp  User.cpp
Models/src/Core/: CoreObject.cpp  Event.cpp  IoTDevice.cpp  Server.cpp
Models/src/Data/: MqttTopic.cpp
Models/src/IoTDevices/: MqttDevice.cpp
Models/src/Location/: Site.cpp  Zone.cpp
Models/src/Servers/: MqttBroker.cpp
MqttPlugin/: CMakeLists.txt
MqttPlugin/src/: MqttClientPlugin.cpp  TimeKeeper.cpp  TimeKeeper.hpp
Repositories/: CMakeLists.txt
Repositories/include/Repositories/: EventRepo.hpp  GenericRepo.hpp  GenericRepo_impl.hpp  IotDevicesRepo.hpp  MqttTopicRepo.hpp  ServerRepo.hpp  SiteRepo.hpp  UserRepo.hpp  ZoneRepo.hpp
Repositories/src/: GenericRepo.cpp
StaticContentPlugin/: CMakeLists.txt
StaticContentPlugin/src/: StaticContentPlugin.cpp
StaticContentPlugin/test/: CMakeLists.txt
StaticContentPlugin/test/src/: StaticContentPluginTests.cpp
Topology/: CMakeLists.txt
Topology/include/Topology/: TopologyGraph.hpp  TopologyUpdate.hpp
Topology/src/: TopologyGraph.cpp  TopologyUpdate.cpp
include/WebServer/: PluginEntryPoint.hpp
sql/: iot.sql
src/: Plugin.cpp  Plugin.hpp  PluginLoader.cpp  PluginLoader.hpp  TimeKeeper.cpp  TimeKeeper.hpp  main.cpp
